# digital-product-generator

./: .coveragerc  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  LICENSE.txt  README.md  README.rst  app.py  packages.txt  pyproject.toml  pyproject_test.toml  requirements.txt  setup.cfg  setup.py
config/: app-config.yaml
digiprod_gen/: __about__.py  __init__.py  app.py  constants.py
digiprod_gen/backend/: helper.py
digiprod_gen/backend/agent/: constants.py  test_agent.py
digiprod_gen/backend/agent/memory/: __init__.py  container.py
digiprod_gen/backend/agent/models/: api.py  io.py  memory.py
digiprod_gen/backend/agent/tools/: common.py  crawling.py  product.py  upload.py
digiprod_gen/backend/api/: api.py  common.py
digiprod_gen/backend/api/endpoints/: browser.py  image.py  research.py  status.py  text.py
digiprod_gen/backend/browser/: selenium_fns.py
digiprod_gen/backend/browser/crawling/: bs_fns.py  mba.py  parser.py  proxies.py  selenium_mba.py  utils.py
digiprod_gen/backend/data_classes/: common.py  config.py  mba.py  session.py
digiprod_gen/backend/etl/: extract_fns.py  load_fns.py
digiprod_gen/backend/image/: background_removal.py  caption.py  common.py  compress.py  conversion.py  crop.py  generation.py  lvm_fns.py  outpainting.py  resolution.py  stabilityai.py  upscale.py  utils.py
digiprod_gen/backend/io/: io_fns.py
digiprod_gen/backend/models/: common.py  config.py  export.py  llm_output.py  mba.py  request.py  response.py  session.py
digiprod_gen/backend/prompt_engineering/: langchain_fns.py  midjourney_prompt_examples.py  utils.py
digiprod_gen/backend/text/: data_classes.py  mba_banned_word.py  text_gen_fns.py
digiprod_gen/backend/transform/: transform_fns.py
digiprod_gen/backend/utils/: __init__.py  exceptions.py  helper.py  utils.py
digiprod_gen/backend_api/: api.py  caller.py
digiprod_gen/backend_api/api/: api.py  common.py
digiprod_gen/backend_api/browser/: selenium_fns.py
digiprod_gen/backend_api/image/: background_removal.py  caption.py  common.py  generation.py  outpainting.py  resolution.py  upscale.py  utils.py
digiprod_gen/backend_api/models/: mba.py  session.py
digiprod_gen/backend_api/prompt_engineering/: langchain_fns.py
digiprod_gen/backend_api/text/: data_classes.py  text_gen_fns.py
digiprod_gen/backend_api/transform/: transform_fns.py
digiprod_gen/backend_api/utils/: __init__.py  decorators.py  utils.py
digiprod_gen/frontend/: agent_callbacks.py  ai_agent.py  backend_caller.py  js.py  session.py  sidebar.py  utils.py
digiprod_gen/pages/: admin_page.py  ai_agent_page.py  manual_page.py
docs/: conf.py  index.rst  requirements.txt
old_code/: open_ai.py
scripts/: test_replicate.py
src/digiprod_gen/backend/: config.json  data_classes.py  utils.py
src/digiprod_gen/frontend/: session.py  sidebar.py
src/digital_product_generator/: __init__.py  skeleton.py  utils.py
src/digital_product_generator/prompt_engineering/: conversation_archive.py  open_ai.py  utils.py
templates/: product_image_check.json  product_image_check.yaml  product_image_check_postprocessing.json  product_image_check_postprocessing.yaml  product_keyword_extractor.json  product_text_brand_gen.json  product_text_bullet_gen.json  product_text_title_gen.json  prompt_gen_postprocessing.yaml  research_asin_translater.json  research_listing_selection.json  research_listing_selection.yaml  research_product_selection.json  research_product_selection.yaml  stable_diffusion_prompt_gen.json  stable_diffusion_prompt_gen.yaml
tests/: blackbox_tests.py  conftest.py  test_skeleton.py
(+76 files in other folders)
