[tool.poetry]
name = "digiprod-gen"
version = "0.1.0"
description = "Digital Product Generator is a streamlit app that allows users to create digital products such a Print on Demand (POD) designs."
authors = ["fteutsch <florian.teutsch@inovex.de>"]
readme = "README.md"
packages = [{include = "digiprod_gen"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.25.0"
streamlit-js-eval = "^0.1.5"
requests = "^2.31.0"
click = "^8.1.7"
pydantic-yaml = "^1.1.1"
pillow = "^10.1.0"
imgkit = "^1.2.3"
langchain-openai = "^0.0.7"
langchain-community = "^0.0.29"


[tool.poetry.group.backend.dependencies]
openai = "1.10.0"
accelerate = "^0.21.0"
bitsandbytes = "^0.40.2"
fastapi = "0.103.2"
httpx = "^0.25.0"
uvicorn = "^0.23.2"
python-multipart = "^0.0.6"
llm-prompting-gen = "^0.1.5"
numpy = "^1.26.2"
selenium = "^4.16.0"
seleniumbase = "^4.22.0"
replicate = "^0.22.0"
selenium-wire = "^5.1.0"
stability-sdk = "^0.8.5"
pillow = "^10.2.0"
pydantic = "^2.5.3"
langchainhub = "^0.1.14"
st-clickable-images = "^0.0.3"
langsmith = "^0.1.5"

[tool.poetry.group.debug.dependencies]
tiktoken = "^0.5.1"


[tool.poetry.group.bugreport.dependencies]
google-search-results = "^2.4.2"
numexpr = "^2.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start_digiprod_gen = 'digiprod_gen.app:start_digiprod_gen'